fixed alignment

--- a/src/sass/60_components/_components.text.scss
+++ b/src/sass/60_components/_components.text.scss
@@ -16,7 +16,7 @@
   }
 
   &__row {
-    justify-content: center;
+    justify-content: flex-start;
     gap: 1.5rem;
 
     .--text-align-left & {
